# quack

./: Dockerfile  README.md  docker-compose.yml  env.dev  exec.py  manage.py  pyproject.toml  requirements.txt
quack_app/: admin.py  apps.py  factories.py  forms.py  urls.py  validators.py  views.py
quack_app/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_handle.py  0004_user_followers_user_following.py  0005_alter_user_profile_pic.py  0006_alter_user_profile_pic.py  0007_alter_user_profile_pic.py  0008_alter_user_profile_pic.py  0009_post_likes_post_parent_alter_user_birth_date.py  0010_alter_user_birth_date.py  0011_remove_post_parent_comment.py  0012_alter_user_followers_alter_user_following.py  0013_remove_user_username_alter_user_profile_pic.py  0014_alter_user_managers.py  0015_alter_user_birth_date.py  0016_user_is_tester.py  0017_remove_user_is_tester.py
quack_app/models/: __init__.py  post.py  user.py
quack_app/templates/: edit.html  guarda.html  home.html  post_detail.html  profile.html  register_login.html
quack_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_follow.py  test_home.py  test_like.py  test_profile.py  test_search.py
